# FFmpeg_master

./: H264.md  H264直播总结.docx  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/ffmpeg_master/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: c_k_pthread.cpp  common.h  ffmpeg_decode_k.cpp  java_vm.cpp  java_vm.h  k_log.h  live.cpp  live.h  native-lib.cpp  queue.cpp  queue.h  queue_live.c  video_play.cpp  video_play.h
app/src/main/cpp/video/: k_play.cpp  play_audio.cpp  play_audio.h  play_call_java.cpp  play_call_java.h  play_ffmpeg.cpp  play_ffmpeg.h  play_queue.cpp  play_queue.h  play_status.cpp  play_status.h  play_video.cpp  play_video.h
app/src/main/java/com/example/administrator/ffmpeg_master/: AudioActivity.java  Camera2Activity.java  CustomSurfaceView.java  MainActivity.java  MultThreadActivity.java  MyApplication.java  OpenSlEsActivity.java  PosixThread.java  SurfaceActivity.java  UUIDUtils.java  VideoUtil.java
app/src/main/java/com/example/administrator/ffmpeg_master/audio/: AudioRecordActivity.java  PcmToWavUtil.java  WavFileHeader.java
app/src/main/java/com/example/administrator/ffmpeg_master/camera/: AudioEncoderThread.java  AvcEncoder.java  Camera2Activity.java  CameraUtil.java  FileUtils.java  MediaMuxerThread.java  VideoEncoderThread.java
app/src/main/java/com/example/administrator/ffmpeg_master/gles/: MyGLSurfaceActivity.java  MyGLSurfaceView.java
app/src/main/java/com/example/administrator/ffmpeg_master/live/: AudioParams.java  AudioPusher.java  LiveActivity.java  LiveListener.java  LivePusher.java  LiveUtil.java  Pusher.java  Test.java  VideoParams.java  VideoPusher.java
app/src/main/java/com/example/administrator/ffmpeg_master/live/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/example/administrator/ffmpeg_master/live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/java/com/example/administrator/ffmpeg_master/mediaextractor/: MediaExtractorActivity.java
app/src/main/java/com/example/administrator/ffmpeg_master/util/: CameraUtil.java  CmdUtil.java  CodecUtil.java  FileUtils.java
app/src/main/java/com/example/administrator/ffmpeg_master/video/: JfOnPreparedListener.java  JfPlayer.java  VideoActivity.java
app/src/main/jni/: cmdutils.c  ffmpeg_filter.c  ffmpeg_mod.c  ffmpeg_opt.c  mathematics.c
app/src/main/jniLibs/include/faac/: faaccfg.h
app/src/main/jniLibs/include/libavcodec/: avcodec.h
app/src/main/jniLibs/include/libavfilter/: buffersrc.h
app/src/main/jniLibs/include/libavformat/: avformat.h
app/src/main/jniLibs/include/libavutil/: internal.h  intmath.h
app/src/main/jniLibs/include/other/: config.h
app/src/main/jniLibs/include/x264/: x264.h
app/src/main/res/layout/: activity_audio.xml  activity_audio2.xml  activity_camera2.xml  activity_live.xml  activity_main.xml  activity_media_extractor.xml  activity_mult_thread.xml  activity_my_glsurface.xml  activity_open_sl_es.xml  activity_surface.xml  activity_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/ffmpeg_master/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sh/: build_264.sh  faac_build.sh  ffmpeg_build.sh
sh/rtmp_build/: Android.mk  Application.mk  rtmp.md
